# stowd

./: CHANGELOG.md  README.md  TODO.md  pyproject.toml  stowd.ini  stowd.py
.github/workflows/: new-release.yaml
sample/: doti.cfg  stowd.cfg
src/doti/options/: args.py
src/stowd/: stowd.py
src/stowd/helpers/: boolean.py  is_bool.py  system.py
src/stowd/options/: args.py  config.py  settings.py
src/stowd/stow/: print_results.py  stow.py
