[project]
name = "stowd"
version = "0.2.1"
authors = [
  { name="Ghassan Alduraibi", email="git@ghassan.dev" },
]
description = "Easily manage all your dotfiles across your devices"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Topic :: Utilities",
]

[project.scripts]
stowd = "stowd.stowd:main"

[project.urls]
"Homepage" = "https://github.com/ghassan0/stowd"
"Bug Tracker" = "https://github.com/ghassan0/stowd/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
